<resources>
    <string name="app_name">Calculator</string>
    <string name="Zero">0</string>
    <string name="on">ON</string>
    <string name="seven">7</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="delete">DEL</string>
    <string name="div">/</string>
    <string name="times">X</string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="ac">AC</string>
    <string name="nine">9</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="point">.</string>
    <string name="eight">8</string>
    <string name="off">off</string>
    <string name="five">5</string>
    <string name="two">2</string>
    <string name="zero">0</string>
</resources>